fix(mods): made sosiskiclient client-side

--- a/mods/sosiskiclient.pw.toml
+++ b/mods/sosiskiclient.pw.toml
@@ -1,5 +1,6 @@
 name = "sosiskiclient"
 filename = "sosiskiclient-1.0.0.jar"
+side = "client"
 
 [download]
 url = "https://storage.yandexcloud.net/cdn.sosiski.lol/sosiskiclient-1.0.0.jar"
