--- a/kubejs/config/client.properties
+++ b/kubejs/config/client.properties
@@ -5,7 +5,7 @@ barBorderColor=ECEFF4
 exportAtlases=false
 menuBackgroundBrightness=64
 disableRecipeBook=false
-title=ВОТ ЭТО ДА! НОВЫЙ ПРОЕКТ RED HAT SYSTEMD — ЭТО ВИРУСНЫЙ ЭКСПЛОИТ GCC!!! 🚨🔥 КИБЕРОРУЖИЕ RED HAT УГРОЗА НАНОРОБОТ ВСТРОЕН В GCC МОДУЛЬ ДЛЯ RED HAT LINUX!!! 💻☢️КВАНТОВО-ФИЗИКО-МАТЕМАТИЧЕСКИЙ УРОВЕНЬ SYSTEMD!!! 🌌🔮 СССР НЛО RED HAT MICROSOFT ИНОПЛАНЕТЯНЕ ЗОНА 51 GCC БЕНДЕР LINUX АНТИМАТЕРИЯ ЦРУ СПЕЦСЛУЖБЫ!!! 🛸👽 СЛЕЖКА ЗА ЛЮДЬМИ ЧЕРЕЗ OPEN SOURCE!!! 🕵️‍♂️💀 ЭТО ПРОЕКТ ЭЛЕМЕНТАРНЫХ МАСШТАБОВ США РАЗВОДКА SYSTEMD!!! 🇺🇸⚠️RED HAT ЗАХВАТ ЗЕМЛИ GCC СУПЕРСЕКРЕТНАЯ РАЗРАБОТКА!!! 🌍☠️SYSTEMD ЕВРЕЙСКАЯ ЦИВИЛИЗАЦИЯ COMMODORE 64!!!
+title=sosiski3
 barColor=ECEFF4
 overrideColors=false
 fmlLogColor=ECEFF4
